--- a/WindowsFormsApp1/WindowsFormsApp1/Administrador.resx
+++ b/WindowsFormsApp1/WindowsFormsApp1/Administrador.resx
@@ -18893,4 +18893,7 @@
         8BXjOCbeA7l1KvCaJR8pYE//2Q==
 </value>
   </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
